SubBt/force-app/main/default/objects/Training_Settings__c/Training_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Training Settings</label>
</CustomObject>