SubBt/force-app/main/default/objects/Training_Settings__c/fields/Course_Completed_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Course_Completed_Email_Template__c</fullName>
    <label>Course Completed Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>