SubBt/force-app/main/default/objects/Training_Settings__c/fields/Registration_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Registration_Email_Template__c</fullName>
    <label>Registration Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>